Enabled Java 17 features